@@ -32,31 +32,31 @@ import _misc.Helper;
  * Window - Preferences - Java - Code Style - Code Templates
  */
 public class DoClusteringStep2 {
-	
+
 	// convention is to always end a directory path with the backslash
-	private static final String ROOT_INPUT_DIR_NOSTEP = Constants.DATA_FILE_REPOSITORY + 
+	private static final String ROOT_INPUT_DIR_NOSTEP = Constants.DATA_FILE_REPOSITORY +
 		"stage1" + Constants.dirSep;
-	private static final String ROOT_INPUT_DIR_STEP = Constants.DATA_FILE_REPOSITORY + 
+	private static final String ROOT_INPUT_DIR_STEP = Constants.DATA_FILE_REPOSITORY +
 		"stage2" + Constants.dirSep;
-	private static final String ROOT_OUTPUT_DIR = Constants.DATA_FILE_REPOSITORY + 
+	private static final String ROOT_OUTPUT_DIR = Constants.DATA_FILE_REPOSITORY +
 		"stage2" + Constants.dirSep;
-	
+
 	private static final int MAX_SIMULT_FILES_OPEN = 2;
-	
+
 	// running time is roughly linear in NUM_CLUSTERERS
-	protected static final byte[] NUM_CLUSTERERS = 
+	protected static final byte[] NUM_CLUSTERERS =
 		new byte[] {10, -1, -1, 4, 1, 1};
-	
+
 //	private static final double WEIGHT_PRECISION_FACTOR = 8.5;
-	
-	
-	
+
+
+
 	// --------------------------------------------------------------------------
-	protected static final int MAX_IN_FILE = 2 * 
+	protected static final int MAX_IN_FILE = 2 *
 		Constants.choose(Card.NUM_CARDS - 7, 2);
-	
+
 //	private static final int weightPrecision = (int) Math.floor(((double) MAX_IN_FILE)/WEIGHT_PRECISION_FACTOR);
-	
+
 //	protected static final int[] MAX_IN_CLUSTERING = new int[] {
 //			(int) (MAX_IN_FILE / RESOLUTION_DECREASE_FACTOR[0]),
 //			(int) (MAX_IN_FILE / RESOLUTION_DECREASE_FACTOR[1]),
@@ -65,7 +65,7 @@ public class DoClusteringStep2 {
 //			(int) (MAX_IN_FILE / RESOLUTION_DECREASE_FACTOR[4]),
 //			(int) (MAX_IN_FILE / RESOLUTION_DECREASE_FACTOR[5])
 //	};
-//	
+//
 //	protected static final float[] STDDEV_IN_SMOOTHING = new float[] {
 //			MAX_IN_CLUSTERING[0] / 25,
 //			MAX_IN_CLUSTERING[1] / 25,
@@ -74,35 +74,35 @@ public class DoClusteringStep2 {
 //			MAX_IN_CLUSTERING[4] / 25,
 //			MAX_IN_CLUSTERING[5] / 25
 //	};
-	
+
 //	protected static final int MAX_NUM_ITERS_IN_CLUSTERING = 12;
 //	protected static final double TOLERANCE_BETWEEN_ITERS_IN_CLUSTERING = .05;
-	
+
 //	protected static float[] weight = new float[weightPrecision];
 
 	private static final int s_PhaseCalculateClusters = 0;
 	private static final int s_PhaseSelectClusterer = 1;
 	private static final int s_PhaseWriteClusteringToDisk = 2;
 	private static final int s_PhaseDone = 3;
-	
+
 
 	public static void main(String[] args) throws IOException {
 		double tTotal = System.currentTimeMillis();
 
 		int numBoardCards = Integer.parseInt(args[0]);
 		int stopAtNumBoardCards = Integer.parseInt(args[1]);
-		
+
 		if(numBoardCards > stopAtNumBoardCards) {
 			throw new RuntimeException();
 		}
-		
+
 		while (numBoardCards <= stopAtNumBoardCards) {
 			double tBoardCards = System.currentTimeMillis();
 			System.out.println("");
 			System.out.println("---------");
 			System.out.println("Clustering " + numBoardCards + " boardcards");
 			System.out.println("---------");
-			
+
 			int numClusterers = NUM_CLUSTERERS[numBoardCards];
 			String inputDir = null;
 			if(numBoardCards < 5) {
@@ -135,11 +135,11 @@ public class DoClusteringStep2 {
 					Constants.choose(Card.NUM_CARDS-2, numBoardCards);
 
 
-			
-			
-			
-			
-			
+
+
+
+
+
 			System.out.println("Entering phase 1 -- clustering...");
 			double tPhase = System.currentTimeMillis();
 			int iterCounter = 1;
@@ -148,7 +148,7 @@ public class DoClusteringStep2 {
 			while(phase != s_PhaseDone) {
 				System.out.println("");
 				double tIteration = System.currentTimeMillis();
-				
+
 				// set up tasks
 				switch(phase) {
 					case s_PhaseCalculateClusters:
@@ -158,12 +158,12 @@ public class DoClusteringStep2 {
 							}
 						}
 						break;
-						
-					
+
+
 					case s_PhaseSelectClusterer:
 						// wrap up previous phase
 						System.out.println("   Completed cluster calculation phase in time: " + (System.currentTimeMillis() - tPhase));
-						
+
 						// start this phase
 						System.out.println("Entering phase 2 --  computing total errors...");
 						tPhase = System.currentTimeMillis();
@@ -171,30 +171,30 @@ public class DoClusteringStep2 {
 							clusterers[i].startErrorComputeRound();
 						}
 						break;
-						
-						
+
+
 					case s_PhaseWriteClusteringToDisk:
 						// wrap up previous phase
 						System.out.println("   Completed clusterer selection phase in time: " + (System.currentTimeMillis() - tPhase));
-						
+
 						// start this phase
 						// write cluster IDs to disk
 						System.out.println("Entering phase 3 -- writing to disk...");
 						tPhase = System.currentTimeMillis();
 						break;
-						
+
 					default:
-						throw new RuntimeException();						
+						throw new RuntimeException();
 				}
-				
-				
+
+
 				for(int i = 0; i < (Card.NUM_CARDS-1); i++) {
 					double tSubiteration = System.currentTimeMillis();
 					for(int j = i+1; j < Card.NUM_CARDS; j++) {
-						
+
 						// load up input file
 						ReadBinaryData in;
-						String path = inputDir + new Integer(i).toString() + "_" + new Integer(j).toString();
+						String path = inputDir + Integer.valueOf(i).toString() + "_" + Integer.valueOf(j).toString();
 						if(numBoardCards == 5) {
 							in = new ReadBinaryScoreStream(path, numBoardCards, Helper.getBufferSize(MAX_SIMULT_FILES_OPEN));
 						} else if(numBoardCards == 0 || numBoardCards == 3 || numBoardCards == 4) {
@@ -202,25 +202,25 @@ public class DoClusteringStep2 {
 						} else {
 							throw new RuntimeException();
 						}
-						
+
 						WriteBinaryClusterIDStream out = null;
 						if(phase == s_PhaseWriteClusteringToDisk) {
-							String outPath = outputDir + new Integer(i).toString() + "_" +  new Integer(j).toString();
+							String outPath = outputDir + Integer.valueOf(i).toString() + "_" +  Integer.valueOf(j).toString();
 							Helper.prepFilePath(outPath);
 							out = new WriteBinaryClusterIDStream(
 									outPath,
-									numBoardCards, 
+									numBoardCards,
 									new byte[] {(byte) i, (byte) j},
-									Card.NUM_CLUSTERS[numBoardCards], 
+									Card.NUM_CLUSTERS[numBoardCards],
 									Helper.getBufferSize(MAX_SIMULT_FILES_OPEN));
 						}
-						
+
 						HandRecord hrsm;
 						// if numBoardCards < 5 then in.readRecord() returns a HandRecordScoreGroups
 						//   else, in.readRecord() returns a HandRecordScore
 						while((hrsm = in.readRecord()) != null) {
 							int[] sample;
-							
+
 							if(numBoardCards == 5) {
 								sample = new int[] {((HandRecordScore)hrsm).score};
 							} else if(numBoardCards == 0 || numBoardCards == 3 || numBoardCards == 4) {
@@ -228,7 +228,7 @@ public class DoClusteringStep2 {
 							} else {
 								throw new RuntimeException();
 							}
-							
+
 							switch(phase) {
 								case s_PhaseCalculateClusters:
 									int a= 1;
@@ -238,18 +238,18 @@ public class DoClusteringStep2 {
 										}
 									}
 									break;
-									
+
 								case s_PhaseSelectClusterer:
 									for(int k = 0; k < numClusterers; k++) {
 										clusterers[k].addSample(sample);
 									}
 									break;
-									
+
 								case s_PhaseWriteClusteringToDisk:
 									byte cluster_id = clusterers[minErrorCluster].getMembership(sample);
 									out.putClusterID(cluster_id);
 									break;
-									
+
 								default:
 									throw new RuntimeException();
 							}
@@ -267,30 +267,30 @@ public class DoClusteringStep2 {
 					}
 					System.out.println("   Iteration " + ((int) Math.floor(100*(((double) i/(Card.NUM_CARDS-2))))) + "% done in time: " + (System.currentTimeMillis() - tSubiteration));
 				}
-				
-				
+
+
 				// close down tasks
 				switch(phase) {
-				
+
 					case s_PhaseCalculateClusters:
 						String clustererDoneStr = "[ ";
 						for(int i = 0; i < numClusterers; i++) {
 							if(!clustererDone[i]) {
 								clustererDone[i] = clusterers[i].doneSampleRound();
 							}
-							clustererDoneStr += (new Boolean(clustererDone[i])).toString() + " ";
+							clustererDoneStr += ( Boolean.valueOf(clustererDone[i])).toString() + " ";
 						}
 						iterCounter++;
-						
+
 						System.out.println("");
 						System.out.println("   Completed iteration " + iterCounter + " in time: " + (System.currentTimeMillis() - tIteration));
 						System.out.println("   clustererDone == " + clustererDoneStr + " ]");
-						
+
 						if(Helper.allTrue(clustererDone)) {
 							phase = s_PhaseSelectClusterer;
 						}
 						break;
-						
+
 					case s_PhaseSelectClusterer:
 						for(int i = 0; i < numClusterers; i++) {
 							clusterers[i].endErrorComputeRound();
@@ -301,7 +301,7 @@ public class DoClusteringStep2 {
 						for(int i = 0; i < numClusterers; i++) {
 							double error = clusterers[i].getError();
 							System.out.println("   Clusterer error: " + error);
-							
+
 							if(error < minError) {
 								minError = error;
 								minErrorCluster = i;
@@ -316,20 +316,20 @@ public class DoClusteringStep2 {
 						System.out.println("");
 						phase = s_PhaseWriteClusteringToDisk;
 						break;
-						
+
 					case s_PhaseWriteClusteringToDisk:
 						System.out.println("   Completed phase in time: " + (System.currentTimeMillis() - tPhase));
 						phase = s_PhaseDone;
 						break;
-						
+
 					default:
 						throw new RuntimeException();
 				}
 			}
 
 			System.out.println("numBoardCards " + numBoardCards + " completed in time: " + (System.currentTimeMillis() - tBoardCards));
-			
-			switch(numBoardCards) { 
+
+			switch(numBoardCards) {
 			case 0 : numBoardCards=3; break;
 			case 3 : numBoardCards=4; break;
 			case 4 : numBoardCards=5; break;
@@ -338,5 +338,5 @@ public class DoClusteringStep2 {
 		}
 		System.out.println("All clustering completed in time: " + (System.currentTimeMillis() - tTotal));
 	}
-	
+
 }
