@@ -25,37 +25,37 @@ import _misc.*;
  * Window - Preferences - Java - Code Style - Code Templates
  */
 public class DoTransitionPDTStep2 {
-	
-	private static final String ROOT_INPUT_DIR = Constants.DATA_FILE_REPOSITORY + 
+
+	private static final String ROOT_INPUT_DIR = Constants.DATA_FILE_REPOSITORY +
 	"stage2" + Constants.dirSep;
-	
-	private static final String ROOT_OUTPUT_DIR = Constants.DATA_FILE_REPOSITORY + 
+
+	private static final String ROOT_OUTPUT_DIR = Constants.DATA_FILE_REPOSITORY +
 	"stage2" + Constants.dirSep;
-	
+
 	private static final int MAX_SIMULT_FILES_OPEN = Constants.choose(Card.NUM_CARDS, 2);
 
 	public static void main(String[] args) throws IOException {
 
 		double timer1 = System.currentTimeMillis();
 
-		int stopAtBoardCards = new Integer(args[0]).intValue();
+		int stopAtBoardCards = Integer.valueOf(args[0]).intValue();
 //		int numBoardCards = stopAtBoardCards;
 		int numBoardCards = 0;
 		while (numBoardCards <= stopAtBoardCards) {
 			int numHoleCards = Constants.choose(Card.NUM_CARDS, 2);
 			double tIter = System.currentTimeMillis();
-			
+
 			// ------------------------------------------------------------
 			// load up all input files
 			// ------------------------------------------------------------
 			String inputDir = ROOT_INPUT_DIR + "transitions_step1_" + numBoardCards + Constants.dirSep;
-			ReadBinaryClusterIdTableStream[] in = 
+			ReadBinaryClusterIdTableStream[] in =
 				new ReadBinaryClusterIdTableStream[numHoleCards];
-			
+
 			int inPointer = 0;
 			for(int i = 0; i < (Card.NUM_CARDS-1); i++) {
 				for(int j = i+1; j < Card.NUM_CARDS; j++) {
-					String path = inputDir + new Integer(i).toString() + "_" + new Integer(j).toString();
+					String path = inputDir + Integer.valueOf(i).toString() + "_" + Integer.valueOf(j).toString();
 					if(numBoardCards == 0 || numBoardCards == 3 || numBoardCards == 4) {
 						in[inPointer++] = new ReadBinaryClusterIdTableStream(path, numBoardCards, Helper.getBufferSize(MAX_SIMULT_FILES_OPEN));
 					} else {
@@ -67,7 +67,7 @@ public class DoTransitionPDTStep2 {
 				throw new RuntimeException();
 			}
 
-			
+
 			// ------------------------------------------------------------
 			// do it
 			// ------------------------------------------------------------
@@ -84,19 +84,19 @@ public class DoTransitionPDTStep2 {
 			int numScenariosPerHC = Constants.choose(
 					Card.NUM_CARDS - numBoardCards, numBoardCards2 - numBoardCards);
 			int numEligible = Constants.choose(Card.NUM_CARDS - numBoardCards, 2);
-			
+
 			long[][][][] counts = new long[numClusters[0]][numClusters[0]][numClusters[1]][numClusters[1]];
-			
+
 			Combinations rootCombo = new Combinations(Card.ALLCARDSINDEX, numBoardCards);
 			byte[] rootBoardCards;
-			
+
 			while(rootCombo.hasMoreElements()) {
 				rootBoardCards = rootCombo.nextElement();
-				
+
 				byte[] cid1 = new byte[numHoleCards];
 				byte[][] cid2 = new byte[numHoleCards][numScenariosPerHC];
 				boolean[] eligible = new boolean[numHoleCards];
-				
+
 				for(int i = 0; i < numHoleCards; i++) {
 					if(Helper.contains(rootBoardCards, holeCards[i][0]) ||
 							Helper.contains(rootBoardCards, holeCards[i][1])) {
@@ -109,7 +109,7 @@ public class DoTransitionPDTStep2 {
 						}
 					}
 				}
-				
+
 				for(int i = 0; i < numHoleCards; i++) {
 					for(int j = i+1; j < numHoleCards; j++) {
 						if(eligible[i] && eligible[j] && holeCards[i][0]!=holeCards[j][0]
@@ -121,9 +121,9 @@ public class DoTransitionPDTStep2 {
 								byte newClusterHC2 = cid2[j][k];
 								if(newClusterHC1 != Byte.MAX_VALUE &&
 										newClusterHC2 != Byte.MAX_VALUE) {
-									
+
 									counts[cid1[i]][cid1[j]][newClusterHC1][newClusterHC2]++;
-									
+
 									// this just makes every # twice as large
 //									counts[cid1[j]][cid1[i]][newClusterHC2][newClusterHC1]++;
 								}
@@ -132,20 +132,20 @@ public class DoTransitionPDTStep2 {
 					}
 				}
 			}
-			
+
 			// finished calculating counts[][][][].
-			
-			
+
+
 			for(int i = 0; i < in.length; i++) {
 				in[i].close();
 			}
-			
+
 			long sum = 0;
 			for(int i = 0; i < numClusters[0]; i++) {
 				for(int j = 0; j < numClusters[0]; j++) {
 					for(int k = 0; k < numClusters[1]; k++) {
 						for(int l = 0; l < numClusters[1]; l++) {
-							System.out.println("[" + i + ", " + 
+							System.out.println("[" + i + ", " +
 									j + ", " + k + ", " + l + "] = " + counts[i][j][k][l]);
 							sum += counts[i][j][k][l];
 						}
@@ -153,14 +153,14 @@ public class DoTransitionPDTStep2 {
 				}
 			}
 			System.out.println(sum);
-			
+
 			// output counts[][][][] to file
 			WriteBinaryTransitionPDT.writePDT(ROOT_OUTPUT_DIR + "transitions_" + numBoardCards,
 					counts, numBoardCards, numBoardCards2, numClusters[0], numClusters[1], Helper.getBufferSize(MAX_SIMULT_FILES_OPEN));
-			
+
 			System.out.println("done " + numBoardCards + " boardcards in time: " + (System.currentTimeMillis() - tIter));
 
-			switch(numBoardCards) { 
+			switch(numBoardCards) {
 			case 0 : numBoardCards=3; break;
 			case 3 : numBoardCards=4; break;
 			case 4 : numBoardCards=Integer.MAX_VALUE; break;
@@ -171,6 +171,6 @@ public class DoTransitionPDTStep2 {
 		System.out.println("");
 		System.out.println("");
 		System.out.println("done job in total time: " + (System.currentTimeMillis() - timer1));
-		
+
 	}
 }
