@@ -10,7 +10,7 @@ import java.util.*;
 import java.io.*;
 
 /**
- * @author Adam
+ * @aut	hor Adam
  *
  * TODO To change the template for this generated type comment go to
  * Window - Preferences - Java - Code Style - Code Templates
@@ -21,26 +21,26 @@ public class ConstraintMatrix implements Serializable {
 	private int idCounter = -1;
 	private Map columns;
 	private int rootRowIndexColumnView = -1;
-	
+
 	// used for row oriented view
 	private List rows;
 	private int rootRowIndexRowView = -1;
-	
+
 	// used for both views
 	private Set rowSet;
 	public boolean rootInitialized = false;
-	
+
 	public ConstraintMatrix() {
 		rowSet = new HashSet();
-		
+
 		// column view
 		columns = new HashMap();
 		idCounter = 0;
-		
+
 		//row view
 		rows = new ArrayList();
 	}
-	
+
 	private ConstraintMatrixRow addIfNew(int parentName, int[] childNames) {
 		ConstraintMatrixRow newRow = new ConstraintMatrixRow();
 		newRow.parentName = parentName;
@@ -52,15 +52,15 @@ public class ConstraintMatrix implements Serializable {
 			return null;
 		}
 	}
-	
+
 	public void addConstraint(int parentName, int[] childNames) {
 		ConstraintMatrixRow cmrAddIfNew = addIfNew(parentName, childNames);
-		
-		addColumnConstraint(new Integer(parentName), childNames, cmrAddIfNew);
+
+		addColumnConstraint( Integer.valueOf(parentName), childNames, cmrAddIfNew);
 		addRowConstraint(parentName, childNames, cmrAddIfNew);
 	}
-	
-	private void addRowConstraint(int parentName, int[] childNames, 
+
+	private void addRowConstraint(int parentName, int[] childNames,
 			ConstraintMatrixRow newRow) {
 
 		if(parentName == -1) {
@@ -70,22 +70,22 @@ public class ConstraintMatrix implements Serializable {
 			}
 			rootRowIndexRowView = rows.size();
 		}
-		
+
 		if(newRow != null) {
 			rows.add(newRow);
 		}
 	}
-	
-	private void addColumnConstraint(Integer parentName, int[] childNames, 
+
+	private void addColumnConstraint(Integer parentName, int[] childNames,
 			ConstraintMatrixRow newRow) {
-		
+
 		if(newRow == null) {
 			return;
 		}
-		
+
 		int thisRowId = idCounter++;
 		ConstraintMatrixColumn columnAlready;
-		
+
 		// handle parent
 		if(parentName.intValue() != -1) {
 			// this isn't the root node constraint
@@ -104,10 +104,10 @@ public class ConstraintMatrix implements Serializable {
 			}
 			rootRowIndexColumnView = thisRowId;
 		}
-		
+
 		// handle children
 		for(int i = 0; i < childNames.length; i++) {
-			Integer objChildName = new Integer(childNames[i]);
+			Integer objChildName = Integer.valueOf(childNames[i]);
 			columnAlready = (ConstraintMatrixColumn) columns.get(objChildName);
 			if(columnAlready == null) {
 				columnAlready = new ConstraintMatrixColumn();
@@ -121,15 +121,15 @@ public class ConstraintMatrix implements Serializable {
 			}
 		}
 	}
-	
+
 	public ConstraintMatrixColumn getColumn(Integer name) {
 		return (ConstraintMatrixColumn) columns.get(name);
 	}
-	
+
 	public ConstraintMatrixRow getRow(int rowNumber) {
 		return (ConstraintMatrixRow) rows.get(rowNumber);
 	}
-	
+
 	public int getNumConstraints() {
 		if(idCounter != rows.size()) {
 			// both views should have the same num of constraints
@@ -137,26 +137,26 @@ public class ConstraintMatrix implements Serializable {
 		}
 		return idCounter;
 	}
-	
+
 	public int getRootRowIndex() {
 		if(rootRowIndexRowView != rootRowIndexColumnView) {
 			// root is added at same time for both, should have
 			// same index
-			
+
 			throw new RuntimeException();
 		}
-		
+
 		if(rootRowIndexRowView < 0) {
 			// cover -1 case
-			throw new RuntimeException(); 
+			throw new RuntimeException();
 		}
-		
+
 		return rootRowIndexRowView;
 	}
-	
+
 	public void printColumnMatrix() {
 		for(int i = 0; i < columns.size(); i++) {
-			ConstraintMatrixColumn entry = (ConstraintMatrixColumn) columns.get(new Integer(i));
+			ConstraintMatrixColumn entry = (ConstraintMatrixColumn) columns.get( Integer.valueOf(i));
 			System.out.println("Col " + i + ": " + entry.toString());
 		}
 	}
